Dodałanie czwartegoparagrafu na gałęzi master

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-   <p>Paragraf pierwszy</p> 
+   <p>Paragraf pierwszy</p>  
    <p>Paragraf drugi</p>
    <p>Trzeci paragraf</p>
-   
+   <p>Czwarty paragraf</p>
 
 </body>
 </html>
