Poprawa blada w 3 paragrafie

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <p>Paragraf pierwszy</p>  
    <p>Paragraf drugi</p>
-   <p>Trzeci paragraf</p>
+   <p>Paragraf trzeci</p>
    <p>Czwarty paragraf</p>
 
 </body>
