Dodanie piatego paragrafu i poprawa czwartego

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <p>Paragraf pierwszy</p>  
    <p>Paragraf drugi</p>
    <p>Paragraf trzeci</p>
-   <p>Czwarty paragraf</p>
-
+   <p>Paragraf czwarty</p>
+   <p>Paragraf piaty</p>
 </body>
 </html>
