--- a/form-workshop/index.html
+++ b/form-workshop/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="https://formspree.io/sviatoslav.karabanov@email.com" method="POST">
+    <form action="https://formspree.io/sviatoslav.karabanov@gmail.com" method="POST">
        <input type="text" name="name" placeholder="Imię i nazwisko"><br><br>
         <label for="email"> Podaj swój e-mail</label> <br>
         <input type="email" name="email" id = "email" placeholder="e-mail"><br><br>
