--- a/html-przyklady/index.html
+++ b/html-przyklady/index.html
@@ -91,7 +91,26 @@
           <input type="submit">       <!--Кнопка выслать-->
           <!-- <button>Wyślij</button> -->
 
-      </form>
+      </form><br><br><br><br>
+      
+      <!-- Можно найти видео в инете и там булет код нему, скопировать и вставить сюда -->
+      <iframe width="560" height="315" 
+      src="https://www.youtube.com/embed/XRP9k9nlAfE" 
+      frameborder="0" allow="accelerometer; autoplay; 
+      encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen></iframe><br><br><br>
+
+
+
+
+      <svg style="height: 100px;">
+        <path d="M30.148 5.588c-2.934-3.42-7.288-5.588-12.148-5.588-8.837 0-16 7.163-16
+        16s7.163 16 16 16c4.86 0 9.213-2.167 12.148-5.588l-10.148-10.412 10.148-
+        10.412zM22 3.769c1.232 0 2.231 0.999 2.231 2.231s-0.999 2.231-2.231 2.231-2.231-
+        0.999-2.231-2.231c0-1.232 0.999-2.231 2.231-2.231z"></path>
+        </svg><br>                         <!--типо что то графика-->
+
+        <img src="pac-man.svg" alt="Plik SVG">
 
       <br>
       <br>
